# MOSART

./: LICENSE  Process.ipynb  Process_ALOS.ipynb  Process_S1.ipynb  README.md  lsquares.py  pyproject.toml  regu.py  regularized_example.ipynb  sfs.py
data/slcs/: README.md  slcs.md
data/slcs1/: README.md
mosart/: lsquares.py  sfs.py
template/: README.md  reference.xml  secondary.xml  shishaldin.dem.xml  stripmapApp.xml
